--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
     <div class="modal">
       <div class="modal__content">
         <div data-close class="modal__close">&times;</div>
-        <img src="./promo.webp" alt="promo" />
+        <img src="./promo.webp?123" alt="promo" />
       </div>
     </div>
     <!-- ? ............. Ivents .............. -->
@@ -1039,6 +1039,6 @@
         <h3>Загрузка...</h3>
       </div>
     </div>
-    <script src="./js/scirpts.js"></script>
+    <script src="./js/scirpts.js?123"></script>
   </body>
 </html>
