--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -97,111 +97,89 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Салат с морской капустой</h3>
+              <h3 class="item__text__name">Цветной</h3>
               <p class="item__text--info">
-                Капуста, морская капуста, яйцо, лук, майонез, зелень
+                (свекла, морковь, капуста, французская заправка, зелень)
               </p>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">3,0 </span>
+            <span class="item__cost">3,3 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Дружба</h3>
+              <h3 class="item__text__name">
+                С грибами, ветчиной и чипсами из бекона
+              </h3>
               <p class="item__text--info">
-                Крабовые палочки, кукуруза, огурец свежий, капуста, майонез,
-                зелень
+                (ветчина, бекон, шампиньоны, картофель и морковь отварные,
+                майонез, зелень)
               </p>
             </div>
-            <span class="item__gramm">150 </span>
-            <span class="item__cost">3,8 </span>
+            <span class="item__gramm">135 </span>
+            <span class="item__cost">4,0 </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Суп фасолевый с копченостями</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">Щи со свежей капусты</h3>
             </div>
-            <span class="item__gramm">280 </span>
-            <span class="item__cost">4,0 </span>
+            <span class="item__gramm">250 </span>
+            <span class="item__cost">3,8 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Тыквенный суп пюре с крутонами</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">Гороховый с копченостями</h3>
             </div>
             <span class="item__gramm">270 </span>
-            <span class="item__cost">3,5 </span>
+            <span class="item__cost">4,0 </span>
           </div>
           <!-- ? ...........ГОРЯЧИЕ БЛЮДА.......... -->
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">
-                Говядина тушеная с черносливом с горшочке
+                Куриный рулетик с грибами в беконе гриль
               </h3>
             </div>
-            <span class="item__gramm">135 </span>
-            <span class="item__cost">7,4 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">
-                Филе птицы с грибами под сырной корочкой
-              </h3>
-            </div>
-            <span class="item__gramm">135 </span>
+            <span class="item__gramm">150 </span>
             <span class="item__cost">6,5 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Котлета Нежность</h3>
+              <h3 class="item__text__name">Гуляш из говядины</h3>
             </div>
-            <span class="item__gramm">125 </span>
-            <span class="item__cost">6,9 </span>
+            <span class="item__gramm">135 </span>
+            <span class="item__cost">7,1 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Фаршированный перец со сметаной</h3>
+              <h3 class="item__text__name">Пельмени домашние</h3>
             </div>
-            <span class="item__gramm">240 </span>
-            <span class="item__cost">7,1 </span>
+            <span class="item__gramm">180 </span>
+            <span class="item__cost">6,7 </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Фаршированный перец со сметаной</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">Картофель с грибами в горшочке</h3>
             </div>
-            <span class="item__gramm">120 </span>
-            <span class="item__cost">4,1 </span>
+            <span class="item__gramm">195 </span>
+            <span class="item__cost">6,3 </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Картофельное пюре</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
             </div>
             <span class="item__gramm">150 </span>
             <span class="item__cost">1,7 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Рис рассыпчатый с куркумой</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">Гречка рассыпчатая</h3>
             </div>
             <span class="item__gramm">150 </span>
             <span class="item__cost">1,7 </span>
@@ -222,12 +200,10 @@
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Сырники</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <p class="item__text--info">со сметанным соусом</p>
             </div>
-            <span class="item__gramm">150 </span>
-            <span class="item__cost">4,0 </span>
+            <span class="item__gramm">180 </span>
+            <span class="item__cost">4,8 </span>
           </div>
           <!-- ?  ...........ХЛЕБ.......... -->
           <h2 class="lunch__wrapper--title">Хлеб</h2>
