--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -97,76 +97,76 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Цветной</h3>
+              <h3 class="item__text__name">С морской капустой</h3>
               <p class="item__text--info">
-                (свекла, морковь, капуста, французская заправка, зелень)
+                (морская капуста, яйцо, капуста, лук, майонез, зелень)
               </p>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">3,3 </span>
+            <span class="item__cost">3,5 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                С грибами, ветчиной и чипсами из бекона
-              </h3>
+              <h3 class="item__text__name">Оливье по-домашнему</h3>
               <p class="item__text--info">
-                (ветчина, бекон, шампиньоны, картофель и морковь отварные,
+                (ветчина, морковь, огурец маринованный, горошек, картофель,
                 майонез, зелень)
               </p>
             </div>
-            <span class="item__gramm">135 </span>
-            <span class="item__cost">4,0 </span>
+            <span class="item__gramm">150 </span>
+            <span class="item__cost">4,2 </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Щи со свежей капусты</h3>
+              <h3 class="item__text__name">Рассольник</h3>
             </div>
-            <span class="item__gramm">250 </span>
-            <span class="item__cost">3,8 </span>
+            <span class="item__gramm">270 </span>
+            <span class="item__cost">3,6 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Гороховый с копченостями</h3>
+              <h3 class="item__text__name">Харчо с говядиной</h3>
             </div>
-            <span class="item__gramm">270 </span>
-            <span class="item__cost">4,0 </span>
+            <span class="item__gramm">280 </span>
+            <span class="item__cost">4,5 </span>
           </div>
           <!-- ? ...........ГОРЯЧИЕ БЛЮДА.......... -->
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Куриный рулетик с грибами в беконе гриль
-              </h3>
+              <h3 class="item__text__name">Бифштекс рубленый с яйцом</h3>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">6,5 </span>
+            <span class="item__cost">7,3 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Гуляш из говядины</h3>
+              <h3 class="item__text__name">
+                Тефтели из свинины в сливочном соусе
+              </h3>
             </div>
             <span class="item__gramm">135 </span>
-            <span class="item__cost">7,1 </span>
+            <span class="item__cost">6,2 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Пельмени домашние</h3>
+              <h3 class="item__text__name">
+                Филе птицы с грибами под сырной корочкой
+              </h3>
             </div>
-            <span class="item__gramm">180 </span>
-            <span class="item__cost">6,7 </span>
+            <span class="item__gramm">135 </span>
+            <span class="item__cost">6,9 </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Картофель с грибами в горшочке</h3>
+              <h3 class="item__text__name">Плов с мякотью цыпленка</h3>
             </div>
-            <span class="item__gramm">195 </span>
-            <span class="item__cost">6,3 </span>
+            <span class="item__gramm">210 </span>
+            <span class="item__cost">6,5 </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
@@ -175,14 +175,16 @@
               <h3 class="item__text__name">Картофельное пюре</h3>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">1,7 </span>
+            <span class="item__cost">2,5 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Гречка рассыпчатая</h3>
+              <h3 class="item__text__name">
+                Перловая каша с топленым маслицем
+              </h3>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">1,7 </span>
+            <span class="item__cost">1,8 </span>
           </div>
           <!-- ?  ...........ПЕРЕКУРС.......... -->
           <h2 class="lunch__wrapper--title">Перекус</h2>
@@ -193,7 +195,7 @@
               </h3>
             </div>
             <span class="item__gramm">200 </span>
-            <span class="item__cost">6,0 </span>
+            <span class="item__cost">7,7 </span>
           </div>
           <!--  ? ...........ДЕСЕРТ.......... -->
           <h2 class="lunch__wrapper--title">Десерт</h2>
@@ -201,6 +203,14 @@
             <div class="item__text">
               <h3 class="item__text__name">Сырники</h3>
               <p class="item__text--info">со сметанным соусом</p>
+            </div>
+            <span class="item__gramm">180 </span>
+            <span class="item__cost">4,9 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Панкейки</h3>
+              <p class="item__text--info">со медовым соусом</p>
             </div>
             <span class="item__gramm">180 </span>
             <span class="item__cost">4,8 </span>
@@ -226,9 +236,6 @@
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Хлеб темный</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
             </div>
             <span class="item__gramm">70 </span>
             <span class="item__cost">0,4 </span>
@@ -246,9 +253,6 @@
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Кефир</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
             </div>
             <span class="item__gramm">200 </span>
             <span class="item__cost">0,9 </span>
@@ -257,10 +261,7 @@
           <h2 class="lunch__wrapper--title">Блинчики</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">С птицей</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">С птицей и яйцом</h3>
             </div>
             <span class="item__gramm">100 </span>
             <span class="item__cost">6.0 </span>
@@ -268,39 +269,27 @@
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">С творогом</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+            </div>
+            <span class="item__gramm">100 </span>
+            <span class="item__cost">4.5 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">С ветчиной и сыром</h3>
+            </div>
+            <span class="item__gramm">100 </span>
+            <span class="item__cost">7.7 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">С яблоком и корицей</h3>
             </div>
             <span class="item__gramm">100 </span>
             <span class="item__cost">4.0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">С ветчиной</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">100 </span>
-            <span class="item__cost">5.5 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">С яблоком и корицей</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">100 </span>
-            <span class="item__cost">3.5 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
               <h3 class="item__text__name">С картофелем и грибами</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
             </div>
             <span class="item__gramm">100 </span>
             <span class="item__cost">4.5 </span>
@@ -452,7 +441,7 @@
     <div class="modal">
       <div class="modal__content">
         <div data-close class="modal__close">&times;</div>
-        <img src="../promo.png" alt="promo" />
+        <img src="../promo.webp?123" alt="promo" />
       </div>
     </div>
     <!-- ? ............. Events .............. -->
