--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,6 @@
         <h3>Загрузка...</h3>
       </div>
     </div>
-    <script src="./js/scirpts.js?123"></script>
+    <script src="./js/scirpts.js"></script>
   </body>
 </html>
