--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -97,37 +97,40 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">С морской капустой</h3>
+              <h3 class="item__text__name">Оливье с изюминкой</h3>
               <p class="item__text--info">
-                (морская капуста, яйцо, капуста, лук, майонез, зелень)
+                (мякоть цыпленка,горох, картофель, морковь, огурцы маринованные,
+                ананас, заправка майонез, зелень)
               </p>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">3,5 </span>
+            <span class="item__cost">3,8 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Оливье по-домашнему</h3>
+              <h3 class="item__text__name">Витаминка</h3>
               <p class="item__text--info">
-                (ветчина, морковь, огурец маринованный, горошек, картофель,
-                майонез, зелень)
+                (капуста белокачанная, морковь, масло растительное, уксус,
+                сахар, соль, перец)
               </p>
             </div>
-            <span class="item__gramm">150 </span>
-            <span class="item__cost">4,2 </span>
+            <span class="item__gramm">155 </span>
+            <span class="item__cost">3,0 </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Рассольник</h3>
+              <h3 class="item__text__name">Борщ</h3>
+              <p class="item__text--info">с мякотью цыпленка</p>
             </div>
             <span class="item__gramm">270 </span>
-            <span class="item__cost">3,6 </span>
+            <span class="item__cost">4,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Харчо с говядиной</h3>
+              <h3 class="item__text__name">Крем суп из шампиньонов</h3>
+              <p class="item__text--info">с крутонами</p>
             </div>
             <span class="item__gramm">280 </span>
             <span class="item__cost">4,5 </span>
@@ -136,55 +139,53 @@
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Бифштекс рубленый с яйцом</h3>
+              <h3 class="item__text__name">Пельмени в горшочке</h3>
+              <!-- <p class="item__text--info">с томатом под сырной подушкой</p> -->
             </div>
-            <span class="item__gramm">150 </span>
-            <span class="item__cost">7,3 </span>
+            <span class="item__gramm">180 </span>
+            <span class="item__cost">6,8 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Тефтели из свинины в сливочном соусе
-              </h3>
+              <h3 class="item__text__name">Рыба по-гречески</h3>
             </div>
-            <span class="item__gramm">135 </span>
-            <span class="item__cost">6,2 </span>
+            <span class="item__gramm">125 </span>
+            <span class="item__cost">7,2 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Филе птицы с грибами под сырной корочкой
-              </h3>
+              <h3 class="item__text__name">Гуляш из говядины</h3>
             </div>
             <span class="item__gramm">135 </span>
-            <span class="item__cost">6,9 </span>
+            <span class="item__cost">7,5 </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Плов с мякотью цыпленка</h3>
+              <h3 class="item__text__name">Шашлычок из мякоти цыпленка</h3>
+              <p class="item__text--info">с маринованным лучком на лепешке</p>
             </div>
-            <span class="item__gramm">210 </span>
-            <span class="item__cost">6,5 </span>
+            <span class="item__gramm">250 </span>
+            <span class="item__cost">7,0</span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Картофельное пюре</h3>
+              <!-- <p class="item__text--info">с маслицем и зеленью</p> -->
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">2,5 </span>
+            <span class="item__cost">2,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Перловая каша с топленым маслицем
-              </h3>
+              <h3 class="item__text__name">Гречка рассыпчатая</h3>
+              <!-- <p class="item__text--info">с маслицем</p> -->
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">1,8 </span>
+            <span class="item__cost">2,0 </span>
           </div>
           <!-- ?  ...........ПЕРЕКУРС.......... -->
           <h2 class="lunch__wrapper--title">Перекус</h2>
@@ -201,20 +202,20 @@
           <h2 class="lunch__wrapper--title">Десерт</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Сырники</h3>
-              <p class="item__text--info">со сметанным соусом</p>
+              <h3 class="item__text__name">Слойка</h3>
+              <p class="item__text--info">с изюмом</p>
             </div>
-            <span class="item__gramm">180 </span>
-            <span class="item__cost">4,9 </span>
+            <span class="item__gramm">80 </span>
+            <span class="item__cost">4,5 </span>
           </div>
-          <div class="lanch__wrapper--item item">
+          <!-- <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Панкейки</h3>
               <p class="item__text--info">со медовым соусом</p>
             </div>
             <span class="item__gramm">180 </span>
             <span class="item__cost">4,8 </span>
-          </div>
+          </div> -->
           <!-- ?  ...........ХЛЕБ.......... -->
           <h2 class="lunch__wrapper--title">Хлеб</h2>
           <div class="lanch__wrapper--item item">
@@ -223,7 +224,7 @@
               <p class="item__text--info">Чеснок, кунжут</p>
             </div>
             <span class="item__gramm">170 </span>
-            <span class="item__cost">2,2 </span>
+            <span class="item__cost">1,8 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -231,14 +232,14 @@
               <p class="item__text--info">Чеснок, кунжут</p>
             </div>
             <span class="item__gramm">100 </span>
-            <span class="item__cost">1,7 </span>
+            <span class="item__cost">1,5 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">Хлеб темный</h3>
             </div>
-            <span class="item__gramm">70 </span>
-            <span class="item__cost">0,4 </span>
+            <span class="item__gramm">55 </span>
+            <span class="item__cost">0,6 </span>
           </div>
           <!-- ? ...........НАПИТКИ.......... -->
           <h2 class="lunch__wrapper--title">Напитки</h2>
@@ -440,8 +441,33 @@
     <!-- ? ............... MODAL ............... -->
     <div class="modal">
       <div class="modal__content">
-        <div data-close class="modal__close">&times;</div>
-        <img src="../promo.webp?123" alt="promo" />
+        <div data-close class="modal__close modal__button">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+        <div data-close class="modal__back modal__button">
+          <i class="fa-solid fa-angle-left"></i>
+        </div>
+        <div data-close class="modal__next modal__button">
+          <i class="fa-solid fa-angle-right"></i>
+        </div>
+        <img
+          class="modal__content--image"
+          src="../action1.webp"
+          alt="promo"
+          data-img
+        />
+        <img
+          class="modal__content--image"
+          src="../action2.webp"
+          alt="promo"
+          data-img
+        />
+        <img
+          class="modal__content--image"
+          src="../promo.webp?123"
+          alt="promo"
+          data-img
+        />
       </div>
     </div>
     <!-- ? ............. Events .............. -->
