Make change slides interval

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             <span class="box__wrapper--new">New</span>
             <h3 class="box__wrapper--title">Студенческая</h3>
             <p class="box__wrapper--text">
-              Колбаски Пепперони, ветчина, сосиски
+              ветчина, сосиски, колбаски, сыр Моцарелла, соус Томатный, приправа
+              Лионская
             </p>
           </div>
           <div class="box__numbers">
@@ -1068,7 +1069,7 @@
         <img
           class="modal__content--image"
           src="./promo.webp?123"
-          alt="promo"
+          alt="caraoke"
           data-img
         />
       </div>
