Add second open of modal

--- a/index.html
+++ b/index.html
@@ -1066,12 +1066,12 @@
           alt="promo"
           data-img
         />
-        <img
+        <!-- <img
           class="modal__content--image"
           src="./promo.webp?123"
           alt="caraoke"
           data-img
-        />
+        /> -->
       </div>
     </div>
     <!-- ? ............. Ivents .............. -->
