Delete timeInterval of slider and make variation slide

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link href="./css/main.css?123" rel="stylesheet" />
+    <link href="./css/main.css?125" rel="stylesheet" />
     <link rel="shortcut icon" href="./img/logo_little.png" type="image/png" />
     <meta
       property="og:title"
@@ -41,6 +41,7 @@
     <div class="main">
       <div class="container">
         <img class="main__logo" src="./img/logo.webp" alt="Caprese" />
+        <p></p>
       </div>
     </div>
     <!-- ! ............... NAVIGATION ................ -->
@@ -1054,24 +1055,24 @@
         <div data-close class="modal__next modal__button">
           <i class="fa-solid fa-angle-right"></i>
         </div>
-        <img
+        <!-- <img
           class="modal__content--image"
           src="./action1.webp"
           alt="promo"
           data-img
-        />
-        <img
+        /> -->
+        <!-- <img
           class="modal__content--image"
           src="./action2.webp"
           alt="promo"
           data-img
-        />
-        <!-- <img
+        /> -->
+        <img
           class="modal__content--image"
           src="./promo.webp?123"
           alt="caraoke"
           data-img
-        /> -->
+        />
       </div>
     </div>
     <!-- ? ............. Ivents .............. -->
@@ -1083,6 +1084,6 @@
         <h3>Загрузка...</h3>
       </div>
     </div>
-    <script src="./js/scirpts.js"></script>
+    <script src="./js/scirpts.js?123"></script>
   </body>
 </html>
