--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -465,13 +465,13 @@
         <img
           class="modal__content--image"
           src="../promo.webp?123"
-          alt="promo"
+          alt="caraoke"
           data-img
         />
       </div>
     </div>
     <!-- ? ............. Events .............. -->
     <div data-modal class="ivent show">Акции</div>
-    <script src="../js/scirpts.js"></script>
+    <script src="../js/scirpts.js?123"></script>
   </body>
 </html>
